fix(components): Section content alignment bug

--- a/assets/styles/@tcds/components/section.scss
+++ b/assets/styles/@tcds/components/section.scss
@@ -44,10 +44,4 @@
   &--text-shadow {
     text-shadow: 0 0 1rem color("shade");
   }
-
-  .max-width {
-    display: flex;
-    align-items: center;
-    height: 100%;
-  }
 }
